# snap-recon

./: Makefile  README.md  pyproject.toml  requirements.txt  setup.sh  snaprecon.py
core/: __init__.py  cli.py  engine.py
core/wordlists/: default.txt
docs/: snap-recon.1
modules/: dns_enum.py  port_scanner.py  tech_detect.py  wayback_urls.py
src/core/: banner.py  help_module.py  logger.py
src/modules/: __init__.py  dir_scan.py  security_checks.py  ssl_scanner.py  subdomain_enum.py  whois_lookup.py
tests/: test_basic.py
wordlists/: subdomains.txt
